--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
+body {
+  background-color: #111;
+  color: aliceblue;
+}
+
 .App {
-  text-align: center;
+  padding-top: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.red {
+  color: red;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.green {
+  color: green;
+}
+
+.titles {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 3fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 3fr 1fr 1fr 1fr 1fr 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 2px solid whitesmoke;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.titles h3 {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: black;
+}
+
+center {
+  margin-bottom: 100px;
+  margin-top: 50px;
+}
+
+center input {
+  padding: 10px;
+  width: 80%;
+  outline: none;
+}
+
+@media screen and (max-width: 767px) {
+  .titles {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 2fr  2fr 1fr;
+        grid-template-columns: 1fr 2fr  2fr 1fr;
+    width: 100%;
+  }
+  .titles .remove {
+    display: none;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*# sourceMappingURL=App.css.map */
